# end2end-chat-site

./: .dockerignore  .env  .env.example  .gitignore  .wiki.md  CODE_OF_CONDUCT.md  Client-Cryptography.md  Dockerfile  LICENSE  README.md  admin-cli.sh  artillery.yml  cluster-cli.sh  docker-server.sh  electron-builder.yml  eslint.config.js  index.html  install-dependencies.sh  main.cjs  package-lock.json  package.json  preload.cjs  preload.js  pyproject.toml  readme.md  start.sh  startClient.sh  startServer.sh  tailwind.config.js  template_config.json  tenk.json  tor-setup.md  tsconfig.app.json  vite.config.simple.ts  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
ai_term_exec/: cli.py  config.py  exec.py  hotkey_daemon.py  model.py  tui.py
ai_term_exec.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
config/: electron-builder.yml  package.json  tailwind.config.ts  template_config.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
config/cloudflared/: tunnel-config.yml
docker/: Dockerfile.coturn  Dockerfile.loadbalancer  Dockerfile.postgres  Dockerfile.redis  Dockerfile.server  coturn-entrypoint.sh  docker-compose.yml  postgres-entrypoint.sh  redis-entrypoint.sh  start-postgres.sh
docs/: CONTRIBUTING.md  Client-Cryptography.md  ENVIRONMENT_VARIABLES.md  SECURITY.md  Server-Cryptography.md
electron/: main.cjs  main.js  post-quantum-bridge.mjs  preload.cjs  preload.js  prepare-tor-bundles.cjs  tor-download-info.cjs  tor-manager.cjs
electron/handlers/: device-credentials.cjs  electron-secure-storage.cjs  file-handler.cjs  machine-entropy.cjs  notification-handler.cjs  onion-handler.cjs  p2p-signaling-handler.cjs  pq-crypto-handler.cjs  secure-file.cjs  secure-storage.cjs  security-middleware.cjs  signal-handler-v2.cjs  signal-storage.cjs  storage-handler.cjs  tray-handler.cjs  websocket-handler.cjs
public/: audio-worklet-processor.js
scripts/: Dockerfile.cloudflared  admin-auth.js  build-quantum-haproxy.cjs  cluster-cli.js  deploy-with-ddos-protection.sh  docker-compose.cloudflared.yml  generate_ts_tls.cjs  install-deps.cjs  prepare-tor-bundles.sh  run-artillery.cjs  setup-cloudflared.sh  setup-quantum-haproxy.cjs  simple-tunnel.cjs  simple-tunnel.sh  start-client.cjs  start-docker.cjs  start-loadbalancer.cjs  start-server.cjs  startServerWithCloudflared.sh
server/: .npmrc  database.js  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  server.js  signals.js  unified-crypto.js  user_database.json
server/authentication/: auth-utils.js  authentication.js  device-attestation.js  token-database.js  token-middleware.js  token-security.js  token-service.js
server/bootstrap/: server-bootstrap.js
server/cluster/: auto-loadbalancer.js  cluster-cli.js  cluster-integration.js  cluster-manager.js  haproxy-config-generator.js  hybrid-admin-auth.js
server/config/: config.js  constants.js  secure-credentials.js
server/crypto/: crypto-logger.js  helpers.js  post-quantum-hash.js  unified-crypto.js  unified-key-encryption.js
server/database/: database.js  user_database.json
server/handlers/: signal-handlers.js
server/load-balancer/: auto-loadbalancer.js  haproxy-config-generator.js  haproxy-manager.js  lb-command-listener.js  lb-utils.js  tor-manager.js  tunnel-manager.js
server/messaging/: chunked-message-handler.js  libsignal-handler.js  messaging-utils.js  pq-envelope-handler.js
server/presence/: connection-state.js  presence-service.js  presence.js
server/rate-limiting/: distributed-rate-limiter.js  rate-limit-middleware.js
server/routes/: api-routes.js  (+2 more)
src/: App.tsx  index.css  main.tsx  trusted-types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: auth.rs  file.rs  link.rs  mod.rs  notification.rs  p2p.rs  session.rs  signal.rs  storage.rs  system.rs  tor.rs  websocket.rs
src-tauri/src/crypto/: aead.rs  hash.rs  hybrid.rs  mod.rs  post_quantum.rs  random.rs  utils.rs
src-tauri/src/network/: mod.rs  p2p.rs  websocket.rs
src-tauri/src/signal_protocol/: mod.rs  store.rs
src-tauri/src/storage/: file.rs  machine_entropy.rs  mod.rs
src-tauri/src/system/: mod.rs  notification.rs  power.rs  screen_capture.rs  tray.rs
src-tauri/src/tor/: mod.rs
(+399 files in other folders)
