[package]
name = "qor-chat"
version = "0.0.1"
description = "Secure messaging application"
authors = ["galacticoderr"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "qor_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full", "sync", "time", "process", "fs", "io-util", "net", "rt-multi-thread", "macros"] }
futures = "0.3"
async-trait = "0.1"

# Cryptography
aes-gcm = { version = "0.10", features = ["aes"] }
chacha20poly1305 = "0.10"
sha3 = "0.10"
sha2 = "0.10"
blake3 = { version = "1", features = ["traits-preview"] }
hkdf = "0.12"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
curve25519-dalek = "4"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"
fips204 = "0.4"

# Random number generation
rand = "0.9"
rand_core = "0.9"
getrandom = { version = "0.3", features = ["std"] }

# Constant-time operations
subtle = { version = "2", features = ["std"] }

# Secure memory zeroing
zeroize = { version = "1", features = ["derive", "std"] }

# Networking
tokio-tungstenite = { version = "0.24", features = ["native-tls", "rustls-tls-native-roots"] }
native-tls = "0.2"
tokio-socks = "0.5"
fast-socks5 = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks", "gzip"] }
url = "2"

# System integration
notify-rust = "4"
open = "5"
dirs = "5"
tempfile = "3"
walkdir = "2"
sysinfo = "0.31"
hostname = "0.4"
sys-info = "0.9"

# Database
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
flate2 = "1"
once_cell = "1"
parking_lot = "0.12"
regex = "1"
lazy_static = "1"
futures-util = "0.3"
whoami = "1"
tar = "0.4"
scraper = "0.22"

# Signal Protocol
[dependencies.libsignal-protocol]
git = "https://github.com/signalapp/libsignal"
branch = "main"

[dependencies.libsignal-core]
git = "https://github.com/signalapp/libsignal"
branch = "main"

[dependencies.signal-crypto]
git = "https://github.com/signalapp/libsignal"
branch = "main"

# Platform-specific screen capture
[target.'cfg(target_os = "linux")'.dependencies]
scrap = "0.5"
x11rb = "0.13"

[target.'cfg(target_os = "windows")'.dependencies]
scrap = "0.5"
windows = { version = "0.58", features = ["Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
scrap = "0.5"
core-graphics = "0.23"

# Unix signals
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

# Windows API
[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3"
features = ["libloaderapi", "winuser", "winbase"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
criterion = "0.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
